$Id$

2005-09-11 Edwin Velds <e.velds@gmail.com>
	* Added memory slot/segment viewer widget
	* Added Breakpoint menu (still inactive)

2005-09-09 Albert Beevendorp
	* fixed a bug causing the disassembly showing the
	    wrong byte/word

2005-09-08 Edwin Velds <e.velds@gmail.com>
	* Changed disasm viewer initialisation code
	* Added ignoring openMSX log messages
	* Added memory initialisation

2005-09-04 Wouter Vermaelen <wouter.vermaelen@scarlet.be>
	* fixed compiler warnings
	* define own 'debug_bin2hex' proc:
	    removes dependency on the bin2hex.tcl script

2005-09-04 Edwin Velds <e.velds@gmail.com>
	* Fixed typos in connects
	* Better error handling
	* Changed errors to avoid winsock conflicts

2005-08-31 Edwin Velds <e.velds@gmail.com>
	* Initial import
